# mozc

./: .gitignore  CONTRIBUTING.md  README.md  VOCABULARY_POLICY.md
.github/ISSUE_TEMPLATE/: typing_issue.yml
.github/workflows/: android.yaml  data_integritiy.yaml  lint.yaml  linux.yaml  macos.yaml  windows.yaml
docs/: about_branding.md  build_mozc_for_linux.md  build_mozc_in_osx.md  build_mozc_in_windows.md  release_history.md
src/: .bazelignore  .bazeliskrc  .bazelrc  BUILD.bazel  MODULE.bazel  WORKSPACE.bazel  build_defs.bzl  build_mozc.py  version.bzl  windows.bazelrc
src/base/: BUILD.bazel  android_util.cc  android_util.h  android_util_test.cc  base_test.gyp  clock.cc  config_file_stream.cc  const.h  crash_report_handler.cc  environ.cc  file_util.cc  number_util.cc  number_util_test.cc  password_manager.cc  process_mutex.cc  protobuf_util.cc  protobuf_util.h  protobuf_util_test.cc  protobuf_util_test.proto  singleton.h  system_util.cc  system_util.h  text_normalizer.cc  text_normalizer.h  text_normalizer_test.cc  thread.h
src/base/container/: flat_concurrent_cache.h  flat_concurrent_cache_test.cc
src/base/strings/: BUILD.bazel  safe_global_string.h  safe_global_string_test.cc  unicode_test.cc
src/base/win32/: BUILD.bazel  com_implements_test.cc  hresult.cc  wide_char.cc
src/bazel/: BUILD.qt_win.bazel  pkg_config_repository.bzl  qt_win_repository.bzl  rules_android_ndk.patch  vc_redist_repository.bzl  windows_sdk_rules.win32.template.bzl
src/bazel/bazel_wrapper/: README.md  bazel.bat
src/bazel/win32/: BUILD.bazel  mozc_cc_win32_library.bzl
src/build_tools/: BUILD.bazel  build_arm64x_dll.py  build_qt.py  build_tip_forwarder_dll.py  code_generator_util.py  embed_file.bzl  embed_file.py  gen_win32_resource_header.py  msvs_rc_wrapper.py  open.py  protoc_wrapper.py  update_deps.py  vs_util.py
src/client/: BUILD.bazel
src/config/: BUILD.bazel  config_handler.cc
src/converter/: BUILD.bazel  attribute.h  candidate_filter.cc  candidate_filter.h  candidate_filter_test.cc  converter.cc  converter_test.cc  gen_boundary_data.py  immutable_converter.cc  immutable_converter.h  immutable_converter_interface.h  immutable_converter_main.cc  immutable_converter_test.cc  nbest_generator.cc  nbest_generator.h  nbest_generator_test.cc  quality_regression_util.cc  reverse_converter.cc
src/data/installer/: credits_en.html
src/data/rules/: boundary.def
src/data/symbol/: categorized.tsv  ordering_rule.txt  symbol.tsv
src/data_manager/: BUILD.bazel  data_manager.gypi  data_manager_base.gyp  dataset_magic_writer.cc  mozc_data.bzl
src/data_manager/oss/: BUILD.bazel  oss_data_manager.cc
src/data_manager/testing/: BUILD.bazel  mock_data_manager.cc
src/dictionary/: BUILD.bazel  dictionary_impl.cc  dictionary_impl.h  dictionary_impl_test.cc  dictionary_interface.h  dictionary_mock.h  gen_aux_dictionary.py  gen_pos_map.py  gen_zip_code_seed.py  user_dictionary.cc  user_dictionary_importer.cc  user_dictionary_storage.cc  user_dictionary_storage.h  user_dictionary_storage_test.cc  user_dictionary_util.cc  user_dictionary_util.h  user_dictionary_util_test.cc
src/engine/: BUILD.bazel  data_loader_test.cc  engine.cc  engine.h  engine_converter.cc  engine_converter_test.cc  engine_interface.h  engine_output.cc  engine_output.h  engine_output_test.cc  supplemental_model_interface.h
src/gui/: gui.gyp
src/gui/base/: BUILD.bazel  setup_util.cc
src/gui/config_dialog/: BUILD.bazel  character_form_editor.cc  config_dialog.cc  config_dialog.ui
src/gui/dictionary_tool/: dictionary_tool.cc
src/gui/tool/: BUILD.bazel  mozc_tool.rc  mozc_tool.res  mozc_tool_res.lib
src/gui/word_register_dialog/: word_register_dialog.cc
src/gyp/: common_win.gypi  gen_win32_resource.gypi
src/ipc/: BUILD.bazel  ipc.cc  mach_ipc.cc  win32_ipc.cc
src/mac/: BUILD.bazel  mozc_imk_input_controller.h  mozc_imk_input_controller.mm  mozc_imk_input_controller_test.mm
src/prediction/: BUILD.bazel  dictionary_prediction_aggregator.cc  dictionary_prediction_aggregator_test.cc  dictionary_predictor.cc  dictionary_predictor_test.cc  gen_zero_query_data.py  number_decoder.cc  number_decoder_test.cc  predictor.cc  predictor.h  predictor_interface.h  predictor_test.cc  realtime_decoder.cc  realtime_decoder_test.cc  result.cc  result.h  result_filter.cc  result_test.cc  single_kanji_decoder.cc  single_kanji_decoder_test.cc  user_history_predictor.cc  user_history_predictor.h  user_history_predictor_test.cc
src/protocol/: commands.proto  protocol.gyp  renderer_style.proto  win32_resource.proto
src/renderer/: BUILD.bazel  renderer.gyp  renderer_client.cc  renderer_client.h  renderer_client_test.cc  renderer_server.cc  renderer_server_test.cc  renderer_style.textproto  renderer_style_handler.cc  renderer_style_handler_test.cc  table_layout_test.cc
src/renderer/mac/: CandidateController.mm  CandidateView.h  CandidateView.mm
src/renderer/qt/: qt_window_manager.cc
src/renderer/win32/: BUILD.bazel  candidate_window.cc  candidate_window.h  mozc_renderer.rc  mozc_renderer.res  mozc_renderer_res.lib  text_renderer.cc  win32_dpi_util.cc
src/request/: BUILD.bazel  conversion_request.h  options.h  request_util.h
src/rewriter/: BUILD.bazel  collocation_util.h  date_rewriter.cc  date_rewriter_test.cc  emoticon_rewriter.cc  emoticon_rewriter_test.cc  environmental_filter_rewriter.cc  environmental_filter_rewriter.h  environmental_filter_rewriter_test.cc  gen_usage_rewriter_dictionary_main.cc  number_rewriter_test.cc  rewriter.cc  transliteration_rewriter.cc  usage_rewriter.cc
src/server/: BUILD.bazel  mozc_server.cc  mozc_server.rc  mozc_server.res  mozc_server_res.lib  server.gyp
src/session/: BUILD.bazel  gen_session_stress_test_data.py  session.cc  session_handler.cc  session_handler_tool.cc  session_test.cc
src/storage/: encrypted_string_storage.h
src/unix/emacs/: mozc.el
src/unix/ibus/: BUILD.bazel  gen_mozc_xml.py  ibus_config.cc  (+2 more)
src/win32/installer/: BUILD.bazel  build_installer.py  build_tip_forwarder_dll.py  installer.gyp  installer_64bit.wxs  installer_oss_64bit.wxs  transition.bzl
(+50 files in other folders)
