# Copyright 2010-2021, Google Inc.
# All rights reserved.
#
# Redistribution and use in source and binary forms, with or without
# modification, are permitted provided that the following conditions are
# met:
#
#     * Redistributions of source code must retain the above copyright
# notice, this list of conditions and the following disclaimer.
#     * Redistributions in binary form must reproduce the above
# copyright notice, this list of conditions and the following disclaimer
# in the documentation and/or other materials provided with the
# distribution.
#     * Neither the name of Google Inc. nor the names of its
# contributors may be used to endorse or promote products derived from
# this software without specific prior written permission.
#
# THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
# "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
# LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
# A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
# OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
# SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
# LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
# DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
# THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
# (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
# OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.

load(
    "//:build_defs.bzl",
    "mozc_select",
    "mozc_win_build_rule",
)
load(
    "//:config.bzl",
    "BRANDING",
)

package(default_visibility = ["//:__subpackages__"])

mozc_win_build_rule(
    name = "mozc_tip32",
    target = "//win32/tip:mozc_tip32",
    cpu = "x64_x86_windows",
    static_crt = True,
)

mozc_win_build_rule(
    name = "mozc_tip64",
    target = "//win32/tip:mozc_tip64",
    cpu = "x64_windows",
    static_crt = True,
)

mozc_win_build_rule(
    name = "custom_action",
    target = "//win32/custom_action:custom_action",
    cpu = "x64_windows",
    static_crt = True,
)

filegroup(
    name = "artifacts",
    srcs = [
        "//gui/tool:mozc_tool",
        "//renderer/win32:win32_renderer_main",
        "//server:mozc_server",
        "//win32/broker:mozc_broker_main",
        ":mozc_tip32",
        ":mozc_tip64",
        ":custom_action",
    ],
    target_compatible_with = ["@platforms//os:windows"],
)
